--- a/BYOB/Info.plist
+++ b/BYOB/Info.plist
@@ -42,7 +42,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Home</string>
+					<string>Signup</string>
 				</dict>
 			</array>
 		</dict>
